--- a/HaH.html
+++ b/HaH.html
@@ -14,10 +14,20 @@ var renderer, scene;
 var loader;
 var firebase;
 var inAltspace = window.hasOwnProperty('altspace');
-var cardBox;
+var thisUser;
+var currentRoom;
 
-
+function addHTML(target,html) {
+  var myTarget = document.getElementById(target);
+    myTarget.innerHTML = html;    
+}
+$(document).ready(function() {
+    $('#newRoomButton').click(function() {
+      newRoom($('#roomName').val());
+    });
+});
 (function init (){
+    console.log("App start.")
 	scene = new THREE.Scene();
 	if (inAltspace){
     	renderer = altspace.getThreeJSRenderer();
@@ -25,44 +35,51 @@ var cardBox;
     loader = new THREE.OBJMTLLoader();
     firebase = new Firebase("https://hah.firebaseio.com/");
     netConnect();
+    altspace.getUser().then(function(localUser) {
+        thisUser = localUser;
+    });
 
 }());
-function addHTML(target,html) {
-  var myTarget = document.getElementById(target);
-    myTarget.innerHTML =html;    
-}
 function load (){
 
 	//we will load the cards here, though it may be better to load them on the fly...over 500 objects may take a bit to load at once and normally no more than 20-30sih cards are active at any given time.
-	loader.load("models/HaH_Box.obj", "HaH_Box.mtl", function (object){
-		cardBox = object;
-		scene.add(cardBox.clone());
-	});
 }
 function netConnect(){
+    addHTML("roomInfo", "Connecting to server");
 	/* this is for setting up the network connection
-		My thought is to do a room based multi player...
+		My thought is to do a room based multiplayer...
 		just bring up a list and allow the player to choose which one to join.
 	*/
-	firebase.child("Rooms").once("value", function(snapshot){
-    if (snapshot.exists()){
-        console.log(snapshot.numChildren());
-        addHTML("roomInfo", snapshot.key());
-        for (var i = 0; i <= snapshot.numChildren(); i++){
-        	if(snapshot.child("Room_"+ i).exists()){
-        		console.log(snapshot.child("Room_"+ i).key());
-        		$('#roomInfo').append("<p>" + "Join " + snapshot.child("Room_"+ i).key() + " Number of players " + snapshot.child("Room_"+ i).numChildren() + "</p>");
-        	};
+	firebase.once("value", function(snapshot){
+        console.log("Checking to see if a room exists.");
+        if (snapshot.exists()){
+            console.log(snapshot.numChildren());
+            addHTML("roomInfo", snapshot.key());
+            for (var i = 0; i <= snapshot.numChildren(); i++){
+            	if(snapshot.child("Room "+ i).exists()){
+            		console.log(snapshot.child("Room "+ i).key());
+            		$('#roomInfo').append("<p>" + "<button onclick=joinRoom()>Join</button> " 
+            			+ snapshot.child("Room "+ i).key() 
+            			+ " with " 
+            			+ snapshot.child("Room "+ i).numChildren()
+                        //change from number of players to the players names.
+            			+ " players." 
+            			+ "</p>");
+            	};
+            };       
+        } else {
+            console.log("no rooms available, prompt to create one");
+            $('#roomInfo').append("<p>" + "No rooms available, would you like to create one?" + "</p>" + "<p>" + "Room Name:" + "<input type =text id=roomName><br>" + "</p>" + "<p>" + "<button onClick=newRoom()>Create Room</button>" + "</p>"); 
         };
-        
-        
-    } else {
-        firebase.child("Rooms").update({Room_0: 1});
-        console.log("no rooms available, prompt to create one")
-    };
-});
+    });
 }
-
+function newRoom(){
+    var roomName = $("#roomName").val();
+    console.log(roomName);
+    firebase.child(roomName).child(thisUser.displayName).update({"Card Czar": false });
+    firebase.child(roomName).child(thisUser.displayName).onDisconnect().remove();
+    $('#roomInfo').replaceWith("Joining Room: " + roomName);
+}
 function animate() {
     window.requestAnimationFrame(animate);
     renderer.render(scene);
