fixed background wrapping

--- a/HaH.html
+++ b/HaH.html
@@ -5,7 +5,7 @@
 #rcorners3 {
     border-radius: 25px;
     background: url(BlackCard_back.png);
-    background-position: center;
+    background-position: left top;
     background-repeat: none;
     padding: 18px; 
     width: 297px;
