--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<script src='three.min.js'></script>
+		<script src='ColladaLoader.js'></script>
 		<script src='http://sdk.altvr.com/libs/altspace.js/0.5.3/altspace.min.js'></script>
 	</head>
 	<body>
