Added socket code

--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script src='/socket.io/socket.io.js'></script>
 		<script src='three.min.js'></script>
 		<script src='ColladaLoader.js'></script>
 		<script src='http://sdk.altvr.com/libs/altspace.js/0.5.3/altspace.min.js'></script>
+		<script src='util.js'></script>
+		<script src='game.js'></script>
 	</head>
 	<body>
-		<script src='game.js'></script>
+		<script src='client.js'></script>
 	</body>
 </html>
