Added mouse support to browser version

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
 		<script src='three.min.js'></script>
 		<script src='ColladaLoader.js'></script>
 		<script src='http://sdk.altvr.com/libs/altspace.js/0.6.2/altspace.min.js'></script>
+		<script src='cursorShim.js'></script>
 		<script src='behaviors.js'></script>
 		<script src='util.js'></script>
 		<script src='game.js'></script>
