--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
 		<script src='behaviors.js'></script>
 		<script src='util.js'></script>
 		<script src='game.js'></script>
+		<script src='confetti.js'></script>
 	</head>
 	<body>
 		<script src='client.js'></script>
