--- a/client/test.html
+++ b/client/test.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
-		<script src='/three.min.js'></script>
-		<script src='/ColladaLoader.js'></script>
-		<script src='/util.js'></script>
+		<script src='three.min.js'></script>
+		<script src='ColladaLoader.js'></script>
+		<script src='util.js'></script>
 	</head>
 	<body>
 		<script>
@@ -21,7 +21,7 @@
 			
 			Utils.preloadModels(function()
 			{
-				$.getJSON('classic.json')
+				$.getJSON('/decks/classic.json')
 				.then(function(data){
 					console.log(data);
 					cardData = data;
