Changed URL scheme so index is game list
Also added support for randomly generated rooms

--- a/client/index.html
+++ b/client/index.html
@@ -2,16 +2,18 @@
 <html>
 	<head>
 		<script src='/socket.io/socket.io.js'></script>
-		<script src='three.min.js'></script>
-		<script src='ColladaLoader.js'></script>
+		<script src='/static/three.min.js'></script>
+		<script src='/static/ColladaLoader.js'></script>
 		<script src='http://sdk.altvr.com/libs/altspace.js/0.12.0/altspace.min.js'></script>
-		<script src='cursorShim.js'></script>
-		<script src='behaviors.js'></script>
-		<script src='util.js'></script>
-		<script src='game.js'></script>
-		<script src='confetti.js'></script>
+		<script src='/static/cursorShim.js'></script>
+		<script src='/static/behaviors.js'></script>
+		<script src='/static/util.js'></script>
+		<script src='/static/game.js'></script>
+		<script src='/static/confetti.js'></script>
+
+		<title>Holograms Against Humanity</title>
 	</head>
 	<body>
-		<script src='client.js'></script>
+		<script src='/static/client.js'></script>
 	</body>
 </html>
