Add first batch of Altspace cards

--- a/client/testCards.html
+++ b/client/testCards.html
@@ -21,7 +21,7 @@
 			
 			Utils.preloadModels(function()
 			{
-				$.getJSON('/decks/classic.json')
+				$.getJSON('/decks/altspace.json')
 				.then(function(data){
 					console.log(data);
 					cardData = data;
