--- a/client/testCards.html
+++ b/client/testCards.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name='viewport' content='width=device-width, initial-scale=1'/>
 		<script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
 		<script src='three.min.js'></script>
 		<script src='ColladaLoader.js'></script>
